--- a/myreader-frontend/src/app/js/subscription/subscription-exclusion/subscription-exclusion.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription-exclusion/subscription-exclusion.component.html
@@ -1,11 +1,8 @@
-<p ng-if="$ctrl.loading">Loading exclusion patterns...</p>
-
-<my-chips ng-if="!$ctrl.loading"
-          my-placeholder="$ctrl.placeholder()"
+<my-chips my-placeholder="$ctrl.placeholder()"
           my-disabled="$ctrl.isDisabled()"
           my-on-add="$ctrl.onAdd(value)"
           my-on-remove="$ctrl.onRemove(key)">
-    <my-chip ng-repeat="exclusion in $ctrl.exclusions" my-key="exclusion.uuid">
+    <my-chip ng-repeat="exclusion in $ctrl.myExclusions" my-key="exclusion.uuid">
       <strong>{{::exclusion.pattern}}</strong>
       <em>({{::exclusion.hitCount}})</em>
     </my-chip>
