--- a/myreader-frontend/src/app/js/subscription/subscription.component.css
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.css
@@ -10,3 +10,10 @@
 .subscription-form__origin my-input-container {
     flex-grow: 1;
 }
+
+.subscription-form__pattern-title {
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0.005em;
+    user-select: none;
+}
