Introduce icon button component.

--- a/myreader-frontend/src/app/js/app.component.html
+++ b/myreader-frontend/src/app/js/app.component.html
@@ -1,8 +1,10 @@
 <div class="app">
     <header class="app__header">
-        <md-button class="md-icon-button" ng-if="!$ctrl.isDesktop" ng-click="$ctrl.toggleSidenav()">
-            <my-icon my-type="menu" my-color="white"></my-icon>
-        </md-button>
+        <my-icon-button my-type="menu"
+                        my-color="white"
+                        ng-if="!$ctrl.isDesktop"
+                        ng-click="$ctrl.toggleSidenav()">
+        </my-icon-button>
     </header>
 
     <nav class="app__nav" ng-class="{'app__nav--open': $ctrl.sidenavSlideIn, 'app__nav--animate': !$ctrl.isDesktop}">
