--- a/myreader-frontend/src/app/js/feed-stream/feed-stream.component.html
+++ b/myreader-frontend/src/app/js/feed-stream/feed-stream.component.html
@@ -1,20 +1,18 @@
 <my-list-page my-on-search="$ctrl.navigateTo(params)"
               my-on-refresh="$ctrl.refresh()">
     <my-action-panel>
-        <md-button
-                hide
-                show-gt-md
-                class="md-icon-button"
-                ng-click="$ctrl.previousEntry()">
-            <my-icon my-type="navigate-before"></my-icon>
-        </md-button>
-        <md-button
-                hide
-                show-gt-md
-                class="md-icon-button"
-                ng-click="$ctrl.nextEntry()">
-            <my-icon my-type="navigate-next"></my-icon>
-        </md-button>
+        <my-icon-button hide
+                        show-gt-md
+                        my-type="navigate-before"
+                        ng-if="!$ctrl.isDesktop"
+                        ng-click="$ctrl.previousEntry()">
+        </my-icon-button>
+        <my-icon-button hide
+                        show-gt-md
+                        my-type="navigate-next"
+                        ng-if="!$ctrl.isDesktop"
+                        ng-click="$ctrl.nextEntry()">
+        </my-icon-button>
     </my-action-panel>
     <my-list-panel>
         <my-hotkeys my-bind-to="$ctrl" my-hotkeys="{'down': $ctrl.nextEntry, 'up': $ctrl.previousEntry, 'enter': $ctrl.toggleEntryReadFlag}">
