Replace md-button with my-button in load more component.

--- a/myreader-frontend/src/app/js/shared/component/load-more/load-more.component.html
+++ b/myreader-frontend/src/app/js/shared/component/load-more/load-more.component.html
@@ -1,5 +1,7 @@
-<md-button ng-if="$ctrl.next"
-           ng-disabled="$ctrl.disabled"
+<my-button ng-if="$ctrl.next"
+           my-disabled="$ctrl.disabled"
            ng-click="$ctrl.onClick()"
            my-click-if-in-view>load more
-</md-button>
+</my-button>
+
+
