Add appropriate button type to icon button component.

--- a/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.html
+++ b/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<button class="my-icon-button">
+<button type="button" class="my-icon-button">
     <my-icon my-type="{{::$ctrl.myType}}"
              my-color="{{::$ctrl.myColor}}">
     </my-icon>
