--- a/myreader-frontend/src/app/js/entry/entry.component.html
+++ b/myreader-frontend/src/app/js/entry/entry.component.html
@@ -1,29 +1,19 @@
-<div class="my-entry">
-    <div layout="row">
-        <my-entry-title flex="100"
-                        my-item="$ctrl.item">
-        </my-entry-title>
+<div class="my-entry__header">
+    <my-entry-title my-item="$ctrl.item"></my-entry-title>
 
-        <div flex="noshrink" layout-xs="column">
-            <my-entry-actions my-item="$ctrl.item"
-                              my-on-more="$ctrl.toggleMore(showMore)"
-                              my-on-check="$ctrl.onCheck(item)">
-            </my-entry-actions>
-        </div>
-    </div>
-
-    <div layout="row">
-        <my-entry-tags class="my-entry__entry-tags"
-                       my-item="$ctrl.item"
-                       my-show="$ctrl.showMore"
-                       my-on-change="$ctrl.onTagUpdate(tag)">
-        </my-entry-tags>
-    </div>
-
-    <div layout="row">
-        <my-entry-content class="my-entry__entry-content"
-                          my-item="$ctrl.item"
-                          my-show="$ctrl.showMore">
-        </my-entry-content>
-    </div>
+    <my-entry-actions my-item="$ctrl.item"
+                      my-on-more="$ctrl.toggleMore(showMore)"
+                      my-on-check="$ctrl.onCheck(item)">
+    </my-entry-actions>
 </div>
+
+<my-entry-tags class="my-entry__entry-tags"
+               my-item="$ctrl.item"
+               my-show="$ctrl.showMore"
+               my-on-change="$ctrl.onTagUpdate(tag)">
+</my-entry-tags>
+
+<my-entry-content class="my-entry__entry-content"
+                  my-item="$ctrl.item"
+                  my-show="$ctrl.showMore">
+</my-entry-content>
