Remove unnecessary margins from entry component.

--- a/myreader-frontend/src/app/js/entry/entry.component.html
+++ b/myreader-frontend/src/app/js/entry/entry.component.html
@@ -7,13 +7,11 @@
     </my-entry-actions>
 </div>
 
-<my-entry-tags class="my-entry__entry-tags"
-               my-item="$ctrl.item"
+<my-entry-tags my-item="$ctrl.item"
                my-show="$ctrl.showMore"
                my-on-change="$ctrl.onTagUpdate(tag)">
 </my-entry-tags>
 
-<my-entry-content class="my-entry__entry-content"
-                  my-item="$ctrl.item"
+<my-entry-content my-item="$ctrl.item"
                   my-show="$ctrl.showMore">
 </my-entry-content>
