Remove Angular Material layout directives from subscription component.

--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -36,7 +36,7 @@
 
     <br>
 
-    <my-button-group layout="row" layout-align="end center">
+    <my-button-group class="subscription-form__buttons">
         <my-button
                 my-type="primary"
                 my-disabled="subscriptionForm.$invalid"
