Remove Angular Material layout directives from subscribe component.

--- a/myreader-frontend/src/app/js/subscription/subscribe/subscribe.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscribe/subscribe.component.html
@@ -8,7 +8,7 @@
         <my-validation-message my-form-control="subscriptionForm.origin"></my-validation-message>
     </my-input-container>
 
-    <my-button-group layout="row" layout-align="end center">
+    <my-button-group class="subscribe-form__buttons">
         <my-button
                 my-type="primary"
                 my-disabled="subscriptionForm.$invalid"
