Remove Angular Material layout directives from feed component.

--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -25,7 +25,7 @@
             </a>
         </div>
 
-        <my-button-group layout="row" layout-align="end center">
+        <my-button-group class="admin-feed-form__buttons">
             <my-button
                     my-type="primary"
                     my-on-click="$ctrl.onSave()"
