Remove Angular Material visibility directives from feed stream component.

--- a/myreader-frontend/src/app/js/feed-stream/feed-stream.component.html
+++ b/myreader-frontend/src/app/js/feed-stream/feed-stream.component.html
@@ -1,16 +1,10 @@
 <my-list-page my-on-search="$ctrl.navigateTo(params)"
               my-on-refresh="$ctrl.refresh()">
-    <my-action-panel>
-        <my-icon-button hide
-                        show-gt-md
-                        my-type="navigate-before"
-                        ng-if="!$ctrl.isDesktop"
+    <my-action-panel ng-if="$ctrl.isDesktop">
+        <my-icon-button my-type="navigate-before"
                         ng-click="$ctrl.previousEntry()">
         </my-icon-button>
-        <my-icon-button hide
-                        show-gt-md
-                        my-type="navigate-next"
-                        ng-if="!$ctrl.isDesktop"
+        <my-icon-button my-type="navigate-next"
                         ng-click="$ctrl.nextEntry()">
         </my-icon-button>
     </my-action-panel>
