Remove unnecessary md-block class from search input component.

--- a/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
+++ b/myreader-frontend/src/app/js/shared/component/search-input/search-input.component.html
@@ -1,6 +1,6 @@
 <my-icon my-type="search"></my-icon>
 
-<my-input-container class="md-block my-search-input-container">
+<my-input-container class="my-search-input-container">
     <input name="search"
            aria-label="Search"
            ng-model-options="{debounce: 250}"
