--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -40,6 +40,6 @@
         </my-button-group>
     </form>
 
-    <h2 class="md-title">Fetch errors</h2>
+    <h2 class="admin-feed-form__fetch-error-title">Fetch errors</h2>
     <my-feed-fetch-error></my-feed-fetch-error>
 </div>
