--- a/myreader-frontend/src/app/js/shared/component/validation-message/validation-message.component.html
+++ b/myreader-frontend/src/app/js/shared/component/validation-message/validation-message.component.html
@@ -1,3 +1,3 @@
-<div ng-if="!$ctrl.myFormControl.$pristine" ng-messages="$ctrl.myFormControl.$error" multiple>
+<div ng-if="!$ctrl.myFormControl.$pristine">
     <div ng-repeat="(key, ignore) in $ctrl.myFormControl.$error">{{key}}</div>
 </div>
