--- a/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
+++ b/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.html
@@ -1,6 +1,6 @@
 <div class="my-list-page__action-panel">
     <my-search-input class="my-list-page__search-action"
-                     my-value="$ctrl.$stateParams['q']"
+                     my-value="$ctrl.router.query.q"
                      my-on-change="$ctrl.onSearchChange(value)">
     </my-search-input>
 
