Remove tap highlight color from entry title and icon button.

--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.css
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.css
@@ -8,6 +8,7 @@
 .my-entry-title__title > a {
     color: rgba(0,0,0,0.87);
     text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .my-entry-title__subtitle {
