--- a/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.css
+++ b/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.css
@@ -10,6 +10,7 @@ my-icon-button {
     margin: 10px;
     padding: 0;
     width: 30px;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .my-icon-button:active {
