--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.css
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.css
@@ -11,6 +11,10 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+.my-entry-title__title > a:active {
+    background-color: transparent;
+}
+
 .my-entry-title__subtitle {
     padding-top: 0.3rem;
     font-weight: 400;
