Remove unnecessary html sanitization from frontend.

--- a/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
@@ -1,5 +1,4 @@
 <div class="my-entry-content"
      ng-if="$ctrl.showEntryContent()"
-     ng-bind-html="$ctrl.item.content"
-     my-entry-content-sanitizer>
+     ng-bind-html="$ctrl.item.content">
 </div>
