--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.html
@@ -4,4 +4,4 @@
     </a>
 </h3>
 
-<h4 class="my-entry-title__subtitle">{{$ctrl.item.createdAt | timeago}} on <span ng-bind-html="$ctrl.item.feedTitle"></span></h4>
+<h4 class="my-entry-title__subtitle">{{$ctrl.item.createdAt | timeago}} on {{$ctrl.item.feedTitle}}</h4>
