Migrate EntryTitleComponent to React.

--- a/myreader-frontend/src/app/js/entry/entry.component.html
+++ b/myreader-frontend/src/app/js/entry/entry.component.html
@@ -1,5 +1,5 @@
 <div class="my-entry__header">
-    <my-entry-title my-item="$ctrl.item"></my-entry-title>
+    <react-component name="EntryTitle" props="$ctrl.item"></react-component>
 
     <my-entry-actions my-item="$ctrl.item"
                       my-on-more="$ctrl.toggleMore(showMore)"
