Attach entry content css to React component.

--- a/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
@@ -1,4 +1,3 @@
-<div class="my-entry-content"
-     ng-if="$ctrl.showEntryContent()">
+<div ng-if="$ctrl.showEntryContent()">
     <react-component name="EntryContent" props="$ctrl.item"></react-component>
 </div>
