Remove unnecessary div element from EntryContentComponent template.

--- a/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-content/entry-content.component.html
@@ -1,3 +1,1 @@
-<div ng-if="$ctrl.showEntryContent()">
-    <react-component name="EntryContent" props="$ctrl.item"></react-component>
-</div>
+<react-component ng-if="$ctrl.showEntryContent()" name="EntryContent" props="$ctrl.item"></react-component>
