Introduce React equivalent icon component for IconComponent.

--- a/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.html
+++ b/myreader-frontend/src/app/js/shared/component/buttons/icon-button/icon-button.component.html
@@ -1,5 +1,3 @@
 <button type="button" class="my-icon-button">
-    <my-icon my-type="{{::$ctrl.myType}}"
-             my-color="{{::$ctrl.myColor}}">
-    </my-icon>
+    <react-component name="Icon" props="$ctrl.props"></react-component>
 </button>
