Replace remove button with IconButton in chip component.

--- a/myreader-frontend/src/app/js/shared/component/chips/chip.component.css
+++ b/myreader-frontend/src/app/js/shared/component/chips/chip.component.css
@@ -24,3 +24,7 @@ my-chip {
     padding: 0;
     background-color: transparent;
 }
+
+.my-chip__remove-button > .my-icon-button {
+    margin: 0;
+}
