--- a/myreader-frontend/src/app/js/shared/component/chips/chip.component.html
+++ b/myreader-frontend/src/app/js/shared/component/chips/chip.component.html
@@ -2,10 +2,9 @@
                ng-click="$ctrl.onSelect()">
 </ng-transclude>
 
-<button class="my-chip__remove-button"
-        type="button"
-        tabindex="-1"
-        ng-if="!$ctrl.disabled"
-        ng-click="$ctrl.onRemove()">
-    <my-icon my-type="close"></my-icon>
-</button>
+<react-component name="IconButton"
+                 class="my-chip__remove-button"
+                 tabindex="-1"
+                 ng-if="!$ctrl.disabled"
+                 props="$ctrl.props">
+</react-component>
