--- a/myreader-frontend/src/app/js/entry/entry-content/entry-content.css
+++ b/myreader-frontend/src/app/js/entry/entry-content/entry-content.css
@@ -6,5 +6,5 @@
     max-width: 100%;
     white-space: pre-wrap;
     word-wrap: break-word;
-    background-color: #EBECE4;
+    background-color: #ebece4;
 }
