--- a/myreader-frontend/src/app/js/login/login.component.css
+++ b/myreader-frontend/src/app/js/login/login.component.css
@@ -21,7 +21,7 @@ my-login {
 
 .login__message > span {
     display: block;
-    color: rgb(255,87,34);
+    color: rgb(255, 87, 34);
     text-align: center;
 }
 
