--- a/myreader-frontend/src/app/js/shared/component/chips/chip.component.css
+++ b/myreader-frontend/src/app/js/shared/component/chips/chip.component.css
@@ -5,7 +5,7 @@ my-chip {
     margin: 8px 8px 0 0;
     padding: 0 12px;
     float: left;
-    background: rgb(224,224,224);
+    background: rgb(224, 224, 224);
     user-select: none;
 }
 
