--- a/myreader-frontend/src/app/js/shared/component/chips/chip.css
+++ b/myreader-frontend/src/app/js/shared/component/chips/chip.css
@@ -6,7 +6,7 @@
     margin: 4px;
     padding: 0 12px;
     float: left;
-    background: rgb(224,224,224);
+    background: rgb(224, 224, 224);
     user-select: none;
 }
 
