--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
     min-height: 100%;
     position: relative;
@@ -11,20 +12,27 @@ body {
     width: 100%;
 }
 
+::-moz-focus-inner {
+    border: 0;
+}
+
 /* remove dotted outline on buttons in firefox */
 :focus {
     outline: none;
 }
 
-::-moz-focus-inner {
-    border: 0;
-}
-
-button, select, html, textarea, input {
+button,
+select,
+html,
+textarea,
+input {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-select, button, textarea, input {
+select,
+button,
+textarea,
+input {
     font-size: 100%;
     vertical-align: baseline;
 }
