--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.css
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.css
@@ -1,9 +1,9 @@
 .my-entry-title__title {
-    color: rgba(0,0,0,0.87);
+    color: rgba(0, 0, 0, 0.87);
     display: block;
     font-size: 16px;
     font-weight: 400;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
     margin: 0 0 6px;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
@@ -19,5 +19,5 @@
     line-height: 1rem;
     margin: 10px 0 5px;
     font-size: 14px;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
 }
