--- a/myreader-frontend/src/app/js/feed/feed-fetch-error/feed-fetch-error.component.css
+++ b/myreader-frontend/src/app/js/feed/feed-fetch-error/feed-fetch-error.component.css
@@ -4,11 +4,11 @@
 }
 
 .feed-fetch-error__item > span {
-    color: rgba(0,0,0,0.54);
+    color: rgba(0, 0, 0, 0.54);
     display: block;
     font-size: 14px;
     font-weight: 500;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
     line-height: 1.6em;
     margin: 0;
 }
