--- a/myreader-frontend/src/app/js/shared/component/backdrop/backdrop.component.css
+++ b/myreader-frontend/src/app/js/shared/component/backdrop/backdrop.component.css
@@ -10,13 +10,23 @@
 }
 
 @keyframes my-backdrop-fade-in {
-    0% {opacity: 0;}
-    100% {opacity: 0.5;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0.5;
+    }
 }
 
 @keyframes my-backdrop-fade-out {
-    0% {opacity: 0.5;}
-    100% {opacity: 0;}
+    0% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
 .my-backdrop--visible {
