--- a/myreader-frontend/src/app/js/subscription/subscription-list.component.css
+++ b/myreader-frontend/src/app/js/subscription/subscription-list.component.css
@@ -7,7 +7,7 @@
 .subscription-list__item > h3 {
     font-size: 16px;
     font-weight: 400;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
     line-height: 1.2em;
     margin: 0;
     overflow: hidden;
@@ -16,10 +16,10 @@
 }
 
 .subscription-list__item > span {
-    color: rgba(0,0,0,0.54);
+    color: rgba(0, 0, 0, 0.54);
     font-size: 14px;
     font-weight: 500;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
     line-height: 1.6em;
     margin: 0;
 }
