Introduce React equivalent for input container and validation message component.

--- a/myreader-frontend/src/app/js/subscription/subscription.component.css
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.css
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.subscription-form__origin my-input-container {
+.subscription-form__origin react-component {
     flex-grow: 1;
 }
 
