--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -1,19 +1,8 @@
 <form name="subscriptionForm" class="subscription-form" ng-if="$ctrl.subscription">
-    <my-input-container>
-        <label>Title</label>
-        <input name="title"
-               ng-model="$ctrl.subscription.title"
-               ng-disabled="$ctrl.pendingAction"
-               my-backend-validation my-validations="$ctrl.validations">
-        <my-validation-message my-form-control="subscriptionForm.title"></my-validation-message>
-    </my-input-container>
+    <react-component name="SubscriptionTitleInput" key="title" props="$ctrl.titleProps"></react-component>
 
     <div class="subscription-form__origin">
-        <my-input-container>
-            <label>Url</label>
-            <input disabled
-                   ng-model="$ctrl.subscription.origin">
-        </my-input-container>
+        <react-component name="SubscriptionUrlInput" props="$ctrl.urlProps"></react-component>
         <a ng-href="{{$ctrl.subscription.origin}}" target="_blank" rel="noopener noreferrer">
             <my-icon my-type="open-in-new"></my-icon>
         </a>
