--- a/myreader-frontend/src/app/js/shared/component/icon/icon.css
+++ b/myreader-frontend/src/app/js/shared/component/icon/icon.css
@@ -11,75 +11,80 @@
     width: 24px;
 }
 
-.my-icon--white {
+.my-icon.my-icon--white {
     background-color: rgba(255, 255, 255, 0.87);
 }
 
-.my-icon--grey {
+.my-icon.my-icon--grey {
     background-color: rgba(0, 0, 0, 0.54);
 }
 
-.my-icon__open-in-new {
+.my-icon.my-icon--disabled {
+    background-color: rgba(155, 155, 155, 0.27);
+    cursor: default;
+}
+
+.my-icon.my-icon__open-in-new {
     -webkit-mask: url(~material-design-icons/action/svg/production/ic_open_in_new_24px.svg) no-repeat;
     mask: url(~material-design-icons/action/svg/production/ic_open_in_new_24px.svg) no-repeat;
 }
 
-.my-icon__check {
+.my-icon.my-icon__check {
     -webkit-mask: url(~material-design-icons/navigation/svg/production/ic_check_24px.svg) no-repeat;
     mask: url(~material-design-icons/navigation/svg/production/ic_check_24px.svg) no-repeat;
 }
 
-.my-icon__check-circle {
+.my-icon.my-icon__check-circle {
     -webkit-mask: url(~material-design-icons/action/svg/production/ic_check_circle_24px.svg) no-repeat;
     mask: url(~material-design-icons/action/svg/production/ic_check_circle_24px.svg) no-repeat;
 }
 
-.my-icon__expand-more {
+.my-icon.my-icon__expand-more {
     -webkit-mask: url(~material-design-icons/navigation/svg/production/ic_expand_more_24px.svg) no-repeat;
     mask: url(~material-design-icons/navigation/svg/production/ic_expand_more_24px.svg) no-repeat;
 }
 
-.my-icon__expand-less {
+.my-icon.my-icon__expand-less {
     -webkit-mask: url(~material-design-icons/navigation/svg/production/ic_expand_less_24px.svg) no-repeat;
     mask: url(~material-design-icons/navigation/svg/production/ic_expand_less_24px.svg) no-repeat;
 }
 
-.my-icon__close {
+.my-icon.my-icon__close {
     -webkit-mask: url(~material-design-icons/navigation/svg/production/ic_close_24px.svg) no-repeat;
     mask: url(~material-design-icons/navigation/svg/production/ic_close_24px.svg) no-repeat;
 }
 
-.my-icon__clear {
+.my-icon.my-icon__clear {
     -webkit-mask: url(~material-design-icons/content/svg/production/ic_clear_24px.svg) no-repeat;
     mask: url(~material-design-icons/content/svg/production/ic_clear_24px.svg) no-repeat;
 }
 
-.my-icon__search {
+.my-icon.my-icon__search {
     -webkit-mask: url(~material-design-icons/action/svg/production/ic_search_24px.svg) no-repeat;
     mask: url(~material-design-icons/action/svg/production/ic_search_24px.svg) no-repeat;
 }
 
-.my-icon__refresh {
+.my-icon.my-icon__refresh {
     -webkit-mask: url(~material-design-icons/navigation/svg/production/ic_refresh_24px.svg) no-repeat;
     mask: url(~material-design-icons/navigation/svg/production/ic_refresh_24px.svg) no-repeat;
 }
 
-.my-icon__error {
+.my-icon.my-icon__error {
     -webkit-mask: url(~material-design-icons/alert/svg/production/ic_error_24px.svg) no-repeat;
     mask: url(~material-design-icons/alert/svg/production/ic_error_24px.svg) no-repeat;
 }
 
-.my-icon__navigate-before {
+.my-icon.my-icon__navigate-before {
     -webkit-mask: url(~material-design-icons/image/svg/production/ic_navigate_before_24px.svg) no-repeat;
     mask: url(~material-design-icons/image/svg/production/ic_navigate_before_24px.svg) no-repeat;
 }
 
-.my-icon__navigate-next {
+.my-icon.my-icon__navigate-next {
     -webkit-mask: url(~material-design-icons/image/svg/production/ic_navigate_next_24px.svg) no-repeat;
     mask: url(~material-design-icons/image/svg/production/ic_navigate_next_24px.svg) no-repeat;
 }
 
-.my-icon__menu {
+.my-icon.my-icon__menu {
     -webkit-mask: url(~material-design-icons/navigation/svg/production/ic_menu_24px.svg) no-repeat;
     mask: url(~material-design-icons/navigation/svg/production/ic_menu_24px.svg) no-repeat;
 }
