Replace deprecated input container component in feed component.

--- a/myreader-frontend/src/app/js/feed/feed.component.css
+++ b/myreader-frontend/src/app/js/feed/feed.component.css
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.admin-feed-form__origin my-input-container {
+.admin-feed-form__origin > react-component {
     flex-grow: 1;
 }
 
