--- a/myreader-frontend/src/app/js/shared/component/autocomplete-input/autocomplete-input.component.css
+++ b/myreader-frontend/src/app/js/shared/component/autocomplete-input/autocomplete-input.component.css
@@ -1,4 +1,4 @@
-.my-autocomplete__input > ng-transclude {
+my-autocomplete-input > div {
     position: relative;
     transform: translate(0);
     width: 100%;
